--- a/src/API/CleanArc.Web.Api/appsettings.Development.json
+++ b/src/API/CleanArc.Web.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=localhost;Initial Catalog=CleanArc_DB_8_0;Integrated Security=true;Encrypt=False"
+    "SqlServer": "Data Source=localhost;Initial Catalog=RealEstateAgencyDb;Integrated Security=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
